<resources>
    <string name="app_name">SimpliRemind</string>
    <string name="new_task">Add New Task</string>
    <string name="card_title">Make your own reminder</string>
    <string name="title">Title</string>
    <string name="insert_title">Insert title</string>
    <string name="repeat">Repeat</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="time">Time</string>
    <string name="default_time">00  :  00  :  00</string>
    <string name="add_task">Add Task</string>
    <string-array name="repeat">
        <item>Once</item>
        <item>Daily</item>
        <item>Mon to Fri</item>
    </string-array>
</resources>